# nllb-finetune

./: .gitignore  README.md  eval_nllb.py  eval_nllb_all.py  finetune_nllb.py  prepare_data.py  pyproject.toml  run_finetune.sh
